commit aprés ajout etapes 4 drag and drop intégrale et exemple de sliders a réaliser puis la page 3 graphique réalisé. Reste à faire html css: mettre en place slider dans notre cas lien avec la class Card.js, voir si idée avec set de position cartes et  possible (etape3 du jeu), mettre en responsive les elements et ajout des images + commantaires ligne par ligne (espace etc...)

--- a/Jeu/preparerJeuEtape3.html
+++ b/Jeu/preparerJeuEtape3.html
@@ -33,14 +33,27 @@
         <h2> 3 - Répartition des users stories</h2>
         <p style="text-align:center;font-size:0.7em"> Ceci est un tirage automatique, vous pouvez le relancer en
             cliquant sur ... ‘relancer’</p>
+            <a class="next" href="preparerJeuEtape4.html">&#10095;</a>
+
+
         <div class="cadrespecial"
-            style="width: 80%;height:75em;margin-left:10%; border-radius: 50px; margin-bottom: 3%; background-color: #475158;">
-            <div>
-               <div class="rectangle" ></div>
-
-
+            style="width: 80%;height:66em;margin-left:10%; border-radius: 50px; margin-bottom: 3%; background-color: #475158;">
+            <div style="padding-top: 2%;">
+                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;"> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span></div>
+                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 2%;"><span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
+                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 3%;"><span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
+                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 5%;"><span>&#x2605;</span> <span>&#x2605;</span> </div>
+                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 6%;"><span>&#x2605;</span> </div>
             </div>
-            <div></div>
+            <div>
+                <div style="margin-left:5%; display: flex; ">
+                    <div class="rectangleB"style="text-align: center;padding-top:1%;">XS</div>
+                    <div class="rectangleB"style="text-align: center;padding-top:1%;">S</div>
+                    <div class="rectangleB"style="text-align: center;padding-top:1%;">L</div>
+                    <div class="rectangleB"style="text-align: center;padding-top:1%;">M</div>
+                    <div class="rectangleB"style="text-align: center;margin-right:10%;padding-top:1%;">XL</div>
+                </div>
+            </div>
         </div>
         <div style="margin-left: 33%;">
             <button class="btn shadow-1 rounded-4"
