--- a/Jeu/preparerJeuEtape2.html
+++ b/Jeu/preparerJeuEtape2.html
@@ -14,7 +14,7 @@
   <link type="text/css" rel="stylesheet" href="css/lightslider.css" />
 <script type="text/javascript" src="js/JQuery3.3.1.js"></script>
 <script type="text/javascript"scrc=js/lighslider.js></script> -->
-
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 </head>
 
 <body>
@@ -45,6 +45,7 @@
       <p>Aperçu sur les users stories du projet</p>
 
       <div id="container">
+        
         <!--sliderbox-->
         <!-- <div class="box">
           <img src="https://images-na.ssl-images-amazon.com/images/I/51iy3b19iAL._AC_UY500_.jpg" alt="jeu">
