--- a/Jeu/preparerJeuEtape1.html
+++ b/Jeu/preparerJeuEtape1.html
@@ -5,48 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/scrumble.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@1.1.0/dist/css/axentix.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axentix@1.1.0/dist/js/axentix.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
-<body style="overflow-y: hidden;">
-    <header style="margin-top:1%;">
-
-        <nav class="navbar shadow-1"style=" background-color:#62797F; ">
-            <a href="#" target="_blank" class="navbar-brand"><img src="" alt="logo scrumble"></a>
-            <div class="navbar-menu " style="margin-left: 15%; font-weight: bold;font-size: 1.5em; width:33%;" >
-              <a class="navbar-link " style="margin-left: 20%;"href="authentification.html">CONNEXION</a>
-              <a class="navbar-link" style="margin-left: 20%;" href="#">FAQ</a>
-              <a class="navbar-link" style="margin-left: 20%;" href="preparerJeuEtape1.html">JOUER</a>
-              <a class="navbar-link " style="margin-left: 20%;width:33%;"href="regles.html">REGLES </a>
-              <a class="navbar-link" style="margin-left: 20%;" href="index.html">ACCUEIL</a>
-            </div>
-          </nav>
-
-    </header>
+<body style="overflow-x: hidden;">
+    <header style="margin-top:1%;" id="header"></header>
     <section style="margin-bottom: 10%;">
         <h1>PREPARER LE JEU</h1>
-        <h2> 1 - Créez votre équipe </h2>
-        <div class="cadre"style="display: flex;flex-direction:row; width:50%">
+        <h2 style="font-size: 1.5em;"> 1 - Créez votre équipe </h2>
+        <div class="cadre" style="display: flex;flex-direction:row; width:85%; margin-top: 2%;margin-left: 10%;border: 1px solid black;height:38em;">
             <div>
 
-   <h3 style=" margin-top:20%;">1 - Merci d’indiquer un nombre de joueurs</h3>
+                <h3 style=" margin-top:10%;">1 - Merci d’indiquer un nombre de joueurs</h3>
                 <p>Le jeu est prévu pour être jouable par des équipes de 3 à 10 personnes.
                     Merci de sélectionner un chiffre dans cet écart.</p>
-                    <input type="number" name="number" id="number"Value="3">
+                <input type="number" name="number" id="number" Value="3" style="padding: 30px 15px; font-size: 2em;">
             </div>
             <div class="trait"></div>
             <div>
-                <h3 style=" margin-top:10%;"> 2 - Donnez un pseudo et un statut aux membres de l’équipe</h3>
+                <h3 style=" margin-top:5%;"> 2 - Donnez un pseudo et un statut aux membres de l’équipe</h3>
                 <p>Renseignez les informations sur votre équipe. Nous avons attribué des pseudo par défaut mais vous
                     pouvez les modifier à votre guise. Votre équipe aura un scrum master, un product owner et des
                     développeurs.</p>
-                <form action="" method="post">
+                <form action="" method="post" style="margin-left: -5%;">
                     <div>
-                        <input type="text" name="" id="" Value="Beta"style="margin-left: 0%;margin-right: 10%; width: 100%;">
-                        <select id="statut" name="statut" style=" padding: 5px 25px;">
+                        <input type="text" name="" id="" Value="Beta"
+                            style="margin-left: 0%;margin-right: 10%; width: 66%;padding: 5px 25px;font-size: 2em;">
+                        <select id="statut" name="statut" style=" padding: 5px 25px;width: 100%;height: 3.2em;margin-top: 5%;">
                             <option>statut</option>
                             <option value="Scrum Master" style="margin-left: 0%;">Scrum Master</option>
                             <option value="ProductOwner"> Product Owner</option>
@@ -54,8 +44,9 @@
                         </select>
                     </div>
                     <div>
-                        <input type="text" name="" id="" Value="teta"style="margin-left: 0%;margin-right: 10%; width: 100%;">
-                        <select id="statut" name="statut" style=" padding: 5px 25px;">
+                        <input type="text" name="" id="" Value="teta"
+                            style="margin-left: 0%;margin-right: 10%; width: 66%;padding: 5px 25px;font-size: 2em;">
+                        <select id="statut" name="statut" style=" padding: 2px 15px;width: 100%;height: 3.2em;margin-top: 5%;">
                             <option>statut</option>
                             <option value="Scrum Master" style="margin-left: 0%;">Scrum Master</option>
                             <option value="ProductOwner"> Product Owner</option>
@@ -63,8 +54,9 @@
                         </select>
                     </div>
                     <div>
-                        <input type="text" name="" id="" Value="Omega"style="margin-left: 0%;margin-right: 10%; width: 100%;">
-                        <select id="statut" name="statut" style=" padding: 5px 25px;">
+                        <input type="text" name="" id="" Value="Omega"
+                            style="margin-left: 0%;margin-right: 10%; width: 66%;padding: 5px 25px;font-size: 2em;">
+                        <select id="statut" name="statut" style=" padding: 5px 25px;width: 100%;height: 3.2em;margin-top: 5%;">
                             <option>statut</option>
                             <option value="Scrum Master" style="margin-left: 0%;">Scrum Master</option>
                             <option value="ProductOwner"> Product Owner</option>
@@ -72,20 +64,17 @@
                         </select>
                     </div>
                 </form>
-                <input type="submit" value="Passez a l'Etape Suivante" style="border-radius: 20px;margin-left:20%">
+                <input type="submit" value="Passez a l'Etape Suivante" style="border-radius: 20px;margin-left:30%; background-color: #40C834;padding: 25px 5px; margin-bottom: 2%;">
             </div>
         </div>
 
 
     </section>
     <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
-        <img src="" alt="logofabriquenumerique">
-        <p style="margin-right: 1%; margin-left:5%;"> Mentions légales | RGPD | une réalisation Pyxis.com /
-            Fabriquenumerique.fr </p>
-        <p style=" margin-left:21%; margin-right: 25%;margin-right: 1%;"> Le serveur est prêt à jouer... la balle est
-            dans votre camp </p>
-        <div class="cercle"> </div>
     </footer>
+    <script src="js/navbar.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/Regles.js"></script>
 </body>
 
 </html>
