--- a/Jeu/preparerJeuEtape2.html
+++ b/Jeu/preparerJeuEtape2.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/scrumble.css">
   <link rel="stylesheet" href="css/etape2Jeu.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@1.1.0/dist/css/axentix.min.css">
   <script src="https://cdn.jsdelivr.net/npm/axentix@1.1.0/dist/js/axentix.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
@@ -14,23 +16,11 @@
   <link type="text/css" rel="stylesheet" href="css/lightslider.css" />
 <script type="text/javascript" src="js/JQuery3.3.1.js"></script>
 <script type="text/javascript"scrc=js/lighslider.js></script> -->
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script> -->
 </head>
 
-<body>
-  <header style="margin-top:1%;">
-
-    <nav class="navbar shadow-1" style=" background-color:#62797F; ">
-      <a href="#" target="_blank" class="navbar-brand"><img src="" alt="logo scrumble"></a>
-      <div class="navbar-menu " style="margin-left: 15%; font-weight: bold;font-size: 1.5em; width:33%;">
-        <a class="navbar-link " style="margin-left: 20%;" href="authentification.html">CONNEXION</a>
-        <a class="navbar-link" style="margin-left: 20%;" href="#">FAQ</a>
-        <a class="navbar-link" style="margin-left: 20%;" href="preparerJeuEtape1.html">JOUER</a>
-        <a class="navbar-link " style="margin-left: 20%;width:33%;" href="regles.html">REGLES </a>
-        <a class="navbar-link" style="margin-left: 20%;" href="index.html">ACCUEIL</a>
-      </div>
-    </nav>
-  </header>
+<body style="overflow-x: hidden;">
+  <header style="margin-top:1%;"id="header"></header>
 
   <section style="margin-bottom: 10%;">
 
@@ -103,14 +93,10 @@
 
 
   <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
-    <img src="" alt="logofabriquenumerique">
-    <p style="margin-right: 1%; margin-left:5%;"> Mentions légales | RGPD | une réalisation Pyxis.com /
-      Fabriquenumerique.fr </p>
-    <p style=" margin-left:21%; margin-right: 25%;margin-right: 1%;"> Le serveur est prêt à jouer... la balle est
-      dans votre camp </p>
-    <div class="cercle"> </div>
   </footer>
 
+  <script src="js/navbar.js"></script>
+  <script src="js/footer.js"></script>
 
 
   <script src="js/Cards.js"></script>
