ajout au précédent commit des fichiers sur le slider

--- a/Jeu/authentification.html
+++ b/Jeu/authentification.html
@@ -12,12 +12,12 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
-<body style="overflow-x:hidden;overflow-y: hidden;">
+<body style="overflow-x:hidden;overflow-y: scroll;">
 
     <header style="margin-top:1%;"id="header"></header>
 
     <section>
-        <div class="cadre" style="margin-top: 2.5%;">
+        <div class="cadre" style="margin-top: 2.5%;height: 37em;margin-bottom:3%;">
             <h1 style="margin-left: -5%; padding-top: 5%;"> Inscrivez-vous </h1>
             <form action="" method="post">
 
