--- a/Jeu/jeu.html
+++ b/Jeu/jeu.html
@@ -14,7 +14,7 @@
 </head>
 <body style="overflow-x: hidden;">
     <header style="margin-top:1%;"id="header"> </header>
-    <section>
+    <section>  <a class="prev" href="preparerJeuEtape4.html">&#10094;</a>
         <div style="display: flex;flex-direction: row;">
             <div >Element du jeu plateau</div>
             <div> <a href="slidefinale.html"> Element du jeu carte et piste de dés</a></div>
