--- a/Jeu/exemple.html
+++ b/Jeu/exemple.html
@@ -9,70 +9,82 @@
   <script src="https://cdn.jsdelivr.net/npm/axentix@1.1.0/dist/js/axentix.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link rel="stylesheet" href="css/scrumble.css">
-  <link rel="stylesheet" href="css/etape4Jeu.css">
+  <link rel="stylesheet" href="css/etape2Jeu.css">
   <link rel="stylesheet" href="css/exemple.css">
+  <link rel="stylesheet" type="text/css" href="css/glider.css">
   <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"> -->
 </head>
 
-<body>
-  <!-- <div class="slider owl-carousel">
-      <div class="card">
-        <div class="img">
-<img src="#" alt=""></div>
-<div class="content">
-          <div class="title">
-Briana Tozour</div>
-<div class="sub-title">
-Graphic Designer</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
-<div class="btn">
-            <button>Read more</button>
+<body style="overflow-x: hidden;">
+  <div class="glider-contain multiple"style="margin-left:5%;margin-right:5%; width:90%;">
+    <button class="glider-prev">&#10094;</button><button class="glider-next">&#10095;</button>
+    <div class="glider"style="margin-left:5%;margin-right:10%;"> 
+      <div>
+        <h3> TTTTT</h3>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+          vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+          architecto!</div>
+        </div>
+      <div>
+        <h3> TTTTT</h3>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+          vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+          architecto!</div>
+        </div>
+      <div>
+        <h3> TTTTT</h3>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+          vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+          architecto!</div>
+        </div>
+      <div>
+        <h3> TTTTT</h3>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+          vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+          architecto!</div>
+        </div>
+        <div>
+          <h3> TTTTT</h3>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+            vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+            architecto!</div>
           </div>
-</div>
-</div>
-<div class="card">
-        <div class="img">
-<img src="#" alt=""></div>
-<div class="content">
-          <div class="title">
-Pricilla Preez</div>
-<div class="sub-title">
-Web Developer</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
-<div class="btn">
-            <button>Read more</button>
-          </div>
-</div>
-</div>
-<div class="card">
-        <div class="img">
-<img src="#" alt=""></div>
-<div class="content">
-          <div class="title">
-Eliana Maia</div>
-<div class="sub-title">
-App Developer</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
-<div class="btn">
-            <button>Read more</button>
-          </div>
-</div>
-</div>
-</div>
-<script>
-      $(".slider").owlCarousel({
-        loop: true,
-        autoplay: true,
-        autoplayTimeout: 2000, //2000ms = 2s;
-        autoplayHoverPause: true,
-      });
-    </script> -->
-  <header style="margin-top:1%;">
+          <div>
+            <h3> TTTTT</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio, praesentium corrupti eum dolorem a
+              vero ad quaerat quod delectus, perspiciatis, id natus asperiores? Nulla dolor nam inventore. Reiciendis,
+              architecto!</div>
+            </div>
+    </div>
+   
+
+  </div>
+
+
+  <script src="js/glider.js"></script>
+  <script>
+
+    window.addEventListener('load', function () {
+      new Glider(document.querySelector('.glider'), {
+        slidesToShow: 3,
+        slidesToScroll: 3.3,
+        draggable: true,
+        // dots: '.dots',
+        arrows: {
+          prev: '.glider-prev',
+          next: '.glider-next'
+        }
+      })
+    })
+
+  </script>
+</body>
+
+</html>
+<!-- partie sur drag n drop -->
+<!-- <header style="margin-top:1%;">
 
     <nav class="navbar shadow-1" style=" background-color:#62797F; ">
       <a href="#" target="_blank" class="navbar-brand"><img src="" alt="logo scrumble"></a>
@@ -98,7 +110,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis
     <div class="app">
 
       <div class="lists">
-        <!-- Correspond a envollope de ma carte -->
+        Correspond a envollope de ma carte 
         <div class="list"
           style="width: 25%;height:55em;margin-left:5%; border-radius: 50px; margin-bottom: 3%; background-color: #475158;">
           <div class="case">A FAIRE</div>
@@ -123,7 +135,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis
                 repele culpa alias labore</p>
 
             </div>
-          </div><!-- Correspond a envollope de ma carte -->
+          </div> Correspond a envollope de ma carte
           <div class="list-item" draggable="true" style="margin-left:4%;">
             <div class="box" style="width:14em;height:14em;margin-top:4%;">
               <img
@@ -140,13 +152,13 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis
         <div class="list"
           style="width: 25%;height:55em;margin-left:5%; border-radius: 50px; margin-bottom: 3%; background-color: #475158;">
           <div class="case">EN COURS</div>
-          <!-- Correspond a block ou je range les elements -->
+          Correspond a block ou je range les elements 
 
         </div>
         <div class="list"
           style="width: 25%;height:55em;margin-left:5%; border-radius: 50px; margin-bottom: 3%; background-color: #475158;">
           <div class="case">TERMINE</div>
-          <!-- Correspond a block ou je range les elements -->
+           Correspond a block ou je range les elements 
 
         </div>
 
@@ -210,4 +222,4 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis
     </script>
 </body>
 
-</html>
+</html> -->
