--- a/Jeu/preparerJeuEtape4.html
+++ b/Jeu/preparerJeuEtape4.html
@@ -33,7 +33,7 @@
           <div class="lists"><!-- Correspond a container des 3 colonnes-->
             <!-- Correspond a colonne -->
             <div class="list"
-              style="width: 25%;height:55em;margin-left:5%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
+              style="width: 25%;height:55em;margin-left:2%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
               <div class="case" style="margin-left: 9%;padding-top: 2%;">A FAIRE</div>
                <div class="list-item" draggable="true" style="margin-left:0%;">
                 <div class="box" style="width:18em;height:12em;margin-top:4%;margin-left: 12%;">
@@ -69,13 +69,13 @@
             </div>
             <!-- colonne 2 a EN COURS -->
             <div class="list"
-              style="width: 25%;height:55em;margin-left:5%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
+              style="width: 25%;height:55em;margin-left:2%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
               <div class="case"style="margin-left: 9%;padding-top: 2%;">EN COURS</div>
               <!-- Correspond a block ou je range les elements -->
     
             </div>
             <div class="list"
-              style="width: 25%;height:55em;margin-left:5%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
+              style="width: 25%;height:55em;margin-left:2%; border-radius: 25px; margin-bottom: 3%; background-color: #475158;">
               <div class="case"style="margin-left: 9%;padding-top: 2%;">TERMINE</div>
               <!-- Correspond a block ou je range les elements -->
     
@@ -89,8 +89,8 @@
 
       <div style="display: flex; flex-direction:row;margin-bottom: 5%;margin-left:33%;">
             <button class="btn shadow-1 large rounded-4"
-              style="background-color: rgb(251, 173, 37);margin-right: 10%; color: black; padding: 25px 75px;">Revenir</button>
-            <button class="btn shadow-1 large rounded-4" style="background-color: rgb(77, 200, 52);color:white;padding: 25px 75px;"> La
+              style="background-color: rgb(251, 173, 37);margin-right: 10%; color: black; padding: 25px 75px;margin-top: 10%;">Revenir</button>
+            <button class="btn shadow-1 large rounded-4" style="background-color: rgb(77, 200, 52);color:white;padding: 25px 75px;margin-top:10%;"> La
               suite </button>
         </div>
 
