--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -29,7 +29,7 @@
             Fabriquenumerique.fr </p>
         <p style=" margin-left:21%; margin-right: 25%;margin-right: 1%;"> Le serveur est prêt à jouer... la balle est
             dans votre camp </p>
-        <div class="cercle"> </div> 
+        <p class="cercle"> </p> 
     </footer>
     <script src="./js/init.js"type="module"></script>
 </body>
