commit aprés réalisation du slider+cadre2+correction footer

--- a/JeuMVC Structure/Pages/preparerJeuEtape3.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape3.html
@@ -49,13 +49,15 @@
                 </div>
             </div>
         </div>
-        <div style="margin-left: 33%;">
+        <div class="position">
             <button 
-                style="background-color: rgb(251, 173, 37);margin-right: 10%;">Revenir</button>
+                class="btn2">Revenir</button>
             <button 
-                style="background-color: #FAF5BC;margin-right: 10%;">Relancer</button>
-            <button class="btn shadow-1  rounded-4" style="background-color: rgb(77, 200, 52);color:white;"> <a href="preparerJeuEtape4.html"> Finaliser la
-                prépartion</a></button></div>
+                class="btn3">Relancer</button>
+            <button class="btn" > <a href="/etape4"data-link="/etape4"> Finaliser la
+                prépartion</a>
+            </button>
+        </div>
     </section>
     <!-- <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
       
