--- a/JeuMVC Structure/Pages/preparerJeuEtape4.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape4.html
@@ -86,20 +86,20 @@
 
 
   <div style="display: flex; flex-direction:row;margin-bottom: 5%;margin-left:33%;">
-    <button 
-      style="background-color: rgb(251, 173, 37);margin-right: 10%; color: black; padding: 25px 75px;margin-top: 10%;">Revenir</button>
-    <button 
-      style="background-color: rgb(77, 200, 52);color:white;padding: 25px 75px;margin-top:10%;border-radius: 50px;"><a href="jeu.html"> La
+    <button class="btn2"
+      >Revenir</button>
+    <button class="btn" 
+      ><a href="/jeu" data-link="/jeu"> La
         suite </a></button>
   </div>
 
-  <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;"></footer>
+  <footer class="footer" ></footer>
 
 
 
-  <script src="js/navbar.js"></script>
+  <!-- <script src="js/navbar.js"></script>
   <script src="js/footer.js"></script>
-  <script src="js/jeuEtape4.js"></script>
+  <script src="js/jeuEtape4.js"></script> -->
 </body>
 
 </html>
