--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,37 @@
 
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-    
+
     <link rel="stylesheet" href="../assets/css/scrumble.css">
-    
+
 </head>
+
 <body style="overflow-y: scroll ;">
     <header>
-      <nav>
-          <img src="../assets/img/logo_scrumble.png" alt="">
-          <menu-component></menu-component>
-      </nav>
+        <nav>
+            <img src="../assets/img/logo_scrumble.png" alt="">
+            <menu-component></menu-component>
+        </nav>
     </header>
-   <main id="app">
+    <main id="app">
 
 
 
-   </main>
-    <footer class="footer" style="display:flex; background-color:#62797F; font-weight:bold; font-size:0.8em;">
-        <img src="../assets/img/Logo_FabriqueNumerique_blanc_96.png" alt="logofabriquenumerique">
-        <p style="margin-right: 1%; margin-left:5%;"> Mentions légales | RGPD | une réalisation Pyxis.com /
-            Fabriquenumerique.fr </p>
-        <p style=" margin-left:21%; margin-right: 25%;margin-right: 1%;"> Le serveur est prêt à jouer... la balle est
-            dans votre camp </p>
-        <p class="cercle"> </p> 
+    </main>
+    <footer >
+        <div class="divfooter" id="divcas1">
+            <img src="./assets/img/Logo_FabriqueNumerique_blanc_96.png" alt="logosimplon">
+            <p>Mentions légales | RGPD | une réalisation Pyxis.com /
+                Fabriquenumerique.fr</p>
+        </div>
+        <div class="divfooter" id="divcas2">
+            <p>Le serveur est prêt à jouer... la balle
+                est
+                dans votre camp </p>
+            <p class="cercle"></p>
+        </div>
     </footer>
-    <script src="./js/init.js"type="module"></script>
+    <script src="./js/init.js" type="module"></script>
 </body>
+
 </html>
