--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -8,12 +8,11 @@
 
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-
     <link rel="stylesheet" href="../assets/css/scrumble.css">
 
 </head>
 
-<body style="overflow-y: scroll ;">
+<body >
     <header>
         <nav>
             <img src="../assets/img/logo_scrumble.png" alt="">
