--- a/JeuMVC Structure/Pages/authentification.html
+++ b/JeuMVC Structure/Pages/authentification.html
@@ -39,8 +39,8 @@
                         <option value="expert">expert</option>
                     </select>
                
-                <div style="display: flex;flex-direction: row;">
-                    <input type="reset" value="Annuler" >
+                <div style="display: flex;flex-direction: row; justify-content: center;">
+                    <input type="reset" value="Annuler" style="margin-left: 18%;">
                     <input type="submit"  value="Créer un compte">
                 </div>
             </form>
