commit aprés réalisation du slider+cadre2+correction footer+paquetUserStories

--- a/JeuMVC Structure/Pages/preparerJeuEtape3.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/scrumble.css">
-   
+
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
@@ -20,46 +20,52 @@
         </nav>
       
     </header>-->
-    <section style="margin-bottom: 10%; overflow-y: scroll;"> 
+<section style="margin-bottom: 10%; overflow-y: scroll;">
 
-        <h1>PREPARER LE JEU</h1>
+    <h1>PREPARER LE JEU</h1>
 
-        <h2> 3 - Répartition des users stories</h2>
-        <p style="text-align:center;font-size:0.7em"> Ceci est un tirage automatique, vous pouvez le relancer en
-            cliquant sur ... ‘relancer’</p>
-            <a class="next" href="/etape4"data-link="/etape4">&#10095;</a>
+    <h2> 3 - Répartition des users stories</h2>
+    <p style="text-align:center;font-size:0.7em"> Ceci est un tirage automatique, vous pouvez le relancer en
+        cliquant sur ... ‘relancer’</p>
+    <a class="next" href="/etape4" data-link="/etape4">&#10095;</a>
 
 
-        <div class="cadrespecial"
-            style="width: 60%;height:70em;margin-left:23%; border-radius: 30px; margin-bottom: 3%; background-color: #475158;">
-            <div style="padding-top: 2%;">
-                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;"> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span></div>
-                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 2%;"><span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
-                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 3%;"><span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
-                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 3.5%;"><span>&#x2605;</span> <span>&#x2605;</span> </div>
-                <div class="rectangle"style="display:flex; flex-direction:column; text-align:center;padding-top: 5%;"><span>&#x2605;</span> </div>
-            </div>
-            <div>
-                <div style="margin-left:5%; display: flex;">
-                    <div class="rectangleB"style="text-align: center;padding-top:2%;">XS</div>
-                    <div class="rectangleB"style="text-align: center;padding-top:2%;">S</div>
-                    <div class="rectangleB"style="text-align: center;padding-top:2%;">L</div>
-                    <div class="rectangleB"style="text-align: center;padding-top:2%;">M</div>
-                    <div class="rectangleB"style="text-align: center;margin-right:10%;padding-top:2%;">XL</div>
-                </div>
+    <div class="cadrespecial"
+        style="width: 60%;height:70em;margin-left:23%; border-radius: 30px; margin-bottom: 3%; background-color: #475158;">
+        <div style="padding-top: 2%;">
+            <div class="rectangle" style="display:flex; flex-direction:column; text-align:center;">
+                <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span>
+                <span>&#x2605;</span></div>
+            <div class="rectangle" style="display:flex; flex-direction:column; text-align:center;padding-top: 2%;">
+                <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
+            <div class="rectangle" style="display:flex; flex-direction:column; text-align:center;padding-top: 3%;">
+                <span>&#x2605;</span> <span>&#x2605;</span> <span>&#x2605;</span> </div>
+            <div class="rectangle" style="display:flex; flex-direction:column; text-align:center;padding-top: 3.5%;">
+                <span>&#x2605;</span> <span>&#x2605;</span> </div>
+            <div class="rectangle" style="display:flex; flex-direction:column; text-align:center;padding-top: 5%;">
+                <span>&#x2605;</span> </div>
+        </div>
+        <div>
+            <div style="margin-left:5%; display: flex;">
+                <div class="rectangleB" style="text-align: center;padding-top:2%;">XS</div>
+                <div class="rectangleB" style="text-align: center;padding-top:2%;">S</div>
+                <div class="rectangleB" style="text-align: center;padding-top:2%;">L</div>
+                <div class="rectangleB" style="text-align: center;padding-top:2%;">M</div>
+                <div class="rectangleB" style="text-align: center;margin-right:10%;padding-top:2%;">XL</div>
             </div>
         </div>
-        <div class="position">
-            <button 
-                class="btn2">Revenir</button>
-            <button 
-                class="btn3">Relancer</button>
-            <button class="btn" > <a href="/etape4"data-link="/etape4"> Finaliser la
+    </div>
+    <div class="position">
+        <button class="btn3">Relancer</button>
+        <button 
+                class=" btn2">Revenir</button>
+        <!--  -->
+        <button class="btn"> <a href="/etape4" data-link="/etape4"> Finaliser la
                 prépartion</a>
-            </button>
-        </div>
-    </section>
-    <!-- <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
+        </button>
+    </div>
+</section>
+<!-- <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
       
     </footer>
     <script src="js/navbar.js"></script>
