essi sur sur systeme de réorganisation des userstories pb interact.js ne se charge même avec npm et surtout ne focntionne pas en dynamique (si fecht alors pb)

--- a/JeuMVC Structure/Pages/preparerJeuEtape3.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape3.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/scrumble.css">
     <link rel="stylesheet" href="../assets/css/etape3.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script> -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
@@ -29,7 +30,7 @@
         cliquant sur ... ‘relancer’</p>
     <a class="next" href="/etape4" data-link="/etape4">&#10095;</a>
 
-<!-- class="cadrespecial" -->
+
     <div class="cadrespeciale">
         <div class="eltspecial">
             <div class="ordonnee">
@@ -54,7 +55,7 @@
             </div>
         </div>
         <div>
-            <div  class="abscisse">
+            <div class="abscisse">
                 <div  class="rectangleB">XS</div>
                 <div class="rectangleB">S</div>
                 <div class="rectangleB">L</div>
@@ -66,17 +67,12 @@
     <div class="position">
         <button class="btn3">Relancer</button>
         <button class="btn2">Revenir</button>
-        <!--  -->
+    
         <button class="btn"> <a href="/etape4" data-link="/etape4"> Finaliser la
                 prépartion</a>
         </button>
     </div>
 </section>
-<!-- <footer class="footer" style="display:flex; background-color:#62797F;font-size:0.75em;">
-      
-    </footer>
-    <script src="js/navbar.js"></script>
-    <script src="js/footer.js"></script>
-</body> -->
+
 
 </html>
