insertion de three.js

--- a/JeuMVC Structure/Pages/preparerJeuEtape3.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape3.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/scrumble.css">
     <link rel="stylesheet" href="../assets/css/etape3.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script> -->
+   
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
@@ -35,16 +35,16 @@
         <div class="eltspecial">
             <div class="ordonnee">
                 <div class="rectangle">
-                    <span class="span1">&#x2605;</span> <span class="span1">&#x2605;</span> <span class="span1">&#x2605;</span> <span class="span1">&#x2605;</span>
+                    <span class="span1">&#x2605;</span> <span >&#x2605;</span> <span >&#x2605;</span> <span >&#x2605;</span>
                     <span>&#x2605;</span></div>
-                <div class="rectangle">
-                    <span class="span2">&#x2605;</span> <span class="span2">&#x2605;</span> <span class="span2">&#x2605;</span> <span class="span2">&#x2605;</span> </div>
-                <div class="rectangle">
-                    <span class="span3">&#x2605;</span> <span class="span3">&#x2605;</span> <span class="span3">&#x2605;</span> </div>
-                <div class="rectangle">
-                    <span class="span4">&#x2605;</span> <span class="span4">&#x2605;</span> </div>
-                <div class="rectangle">
-                    <span class="span5">&#x2605;</span>
+                <div class="rectangle2">
+                    <span >&#x2605;</span> <span >&#x2605;</span> <span >&#x2605;</span> <span >&#x2605;</span> </div>
+                <div class="rectangle3">
+                    <span >&#x2605;</span> <span >&#x2605;</span> <span >&#x2605;</span> </div>
+                <div class="rectangle4">
+                    <span >&#x2605;</span> <span >&#x2605;</span> </div>
+                <div class="rectangle5">
+                    <span >&#x2605;</span>
                 </div>
             </div>
             <div  class="carre">
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <div class="position">
+    <div class="misenforme">
         <button class="btn3">Relancer</button>
         <button class="btn2">Revenir</button>
     
@@ -73,6 +73,6 @@
         </button>
     </div>
 </section>
-
+  
 
 </html>
