--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -39,5 +39,6 @@
     </footer>
     <script src="./js/init.js" type="module"></script>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
 </html>
