perfectionnement de la partie Etape3.js avec données statiques

--- a/JeuMVC Structure/Pages/preparerJeuEtape2.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape2.html
@@ -52,8 +52,11 @@
       <div>
         <span class="fleche" class="prev">&#10094;</span>
       </div>
-      <div data-selected="false"id="paquet1">
-        <div> <span class="fleche" class="next">&#10095;</span> </div>
+      <!-- debut ici du fetch pour creer les cartes  -->
+      <div data-selected="false"id="paquet1"></div> 
+      <div> 
+        <span class="fleche" class="next">&#10095;</span>
+      </div>
     </article>
   </section>
 
