commit a prés réalisation du dice

--- a/JeuMVC Structure/Pages/preparerJeuEtape3.html
+++ b/JeuMVC Structure/Pages/preparerJeuEtape3.html
@@ -28,6 +28,8 @@
     <h2> 3 - Estimation des users stories</h2>
     <p class="soustitre"> Ceci est un tirage automatique, vous pouvez le relancer en
         cliquant sur ... ‘relancer’</p>
+        <p class="soustitre"> cliquer sur les cartes selon l'ordre de priorité que vous avez décidé</p>
+        <p class="soustitre"id="nombrecarteSelected">  </p>
     <a class="next" href="/etape4" data-link="/etape4">&#10095;</a>
 
 
