--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -41,4 +41,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+
 </html>
