Mise à jour des fichiers

--- a/Jeu/preparerJeuEtape2.html
+++ b/Jeu/preparerJeuEtape2.html
@@ -37,8 +37,8 @@
 
       <div id="container" class="glider-contain multiple" style="margin-left:2%;margin-right:3%; width:95%;">
         <!-- <div style="margin-left:5%;margin-right:5%; width:90%;"> -->
-        <button class="glider-prev" style="color:#202525">&#10094;</button><button class="glider-next"
-          style="color:#202525">&#10095;</button>
+        <button class="glider-prev" style="color:#202525">&#10094;</button>
+        <button class="glider-next" style="color:#202525">&#10095;</button>
         <div id="glider" class="glider" style="margin-left:5%;margin-right:10%;border:5px;">
           <div class="box"style="width:100%;">
             <img src="https://images-na.ssl-images-amazon.com/images/I/51iy3b19iAL._AC_UY500_.jpg" alt="jeu" ">
@@ -205,8 +205,8 @@
     <div style="margin-left: 33%; margin-top: 5%;">
       <button class="btn shadow-1 rounded-4"
         style="background-color: rgb(251, 173, 37);margin-right: 10%;">Revenir</button>
-      <button class="btn shadow-1  rounded-4" style="background-color: rgb(77, 200, 52);color:white;">Finaliser la
-        prépartion</button>
+      <button class="btn shadow-1  rounded-4" style="background-color: rgb(77, 200, 52);color:white;"> <a href="preparerJeuEtape3.html">Finaliser la
+        prépartion</a> </button>
     </div>
   </section>
 
