--- a/JeuMVC Structure/index.html
+++ b/JeuMVC Structure/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/scrumble.css">
+  
 
 </head>
 
-<body >
+<body>
     <header>
         <nav>
             <img src="../assets/img/logo_scrumble.png" alt="">
@@ -24,7 +25,7 @@
 
 
     </main>
-    <footer >
+    <footer>
         <div class="divfooter" id="divcas1">
             <img src="./assets/img/Logo_FabriqueNumerique_blanc_96.png" alt="logosimplon">
             <p>Mentions légales | RGPD | une réalisation Pyxis.com /
@@ -39,9 +40,10 @@
     </footer>
     <script src="./js/init.js" type="module"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>  
+<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+<script src="//cdn.amcharts.com/lib/4/core.js"></script>
+<script src="//cdn.amcharts.com/lib/4/charts.js"></script>
+
 
 </html>
